# gitlab-watchman

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: docker_build_test.yml  docker_publish.yml  dockerpublish.yml  github_release.yml  python_package.yml  python_run_tests.yml  pythonpackage.yml  pythonpublish.yml
docs/: example.conf  logging.md  rules.md  signatures.md
gitlab_watchman/: __about__.py  __init__.py  __main__.py  config.py  gitlab_wrapper.py  logger.py
gitlab_watchman/rules/: access_tokens.yaml  aws_api_tokens.yaml  azure_service_account_files.yaml  bearer_tokens.yaml  client_secrets.yaml  google_api_tokens.yaml  heroku_tokens.yaml  interesting_files.yaml  pagerduty_tokens.yaml  passwords.yaml  pgp_private_keys.yaml  private_tokens.yaml  s3_config_files.yaml  slack_api_tokens.yaml
gitlab_watchman/rules/files/: gcp_service_account_files.yaml
gitlab_watchman/rules/tokens/: aws_api_tokens.yaml  azure_api_tokens.yaml  cloudflare_api_tokens.yaml  facebook_access_tokens.yaml  facebook_secret_tokens.yaml  github_api_tokens.yaml  google_api_tokens.yaml  mailchimp_api_tokens.yaml  mailgun_api_tokens.yaml  mastercard_datacash_tokens.yaml  misc_private_keys.yaml  ms_nuget_key.yaml  pagerduty_tokens.yaml  shodan_api_tokens.yaml  slack_api_tokens.yaml  slack_webhooks.yaml  ssh_private_keys.yaml  stripe_api_tokens.yaml  twilio_api_tokens.yaml  twitter_api_tokens.yaml
src/: __init__.py
src/gitlab_watchman/: __init__.py  __main__.py  __version__.py  exceptions.py  gitlab_wrapper.py  gw_logger.py  logger.py  loggers.py  signature.py  signature_downloader.py  signature_updater.py  utils.py  watchman_processor.py
src/gitlab_watchman/clients/: gitlab_client.py
src/gitlab_watchman/gitlab_objects/: blob.py  commit.py  file.py  issue.py  merge_request.py  milestone.py  note.py  project.py  snippet.py  user.py  wiki_blob.py
src/gitlab_watchman/models/: blob.py  commit.py  file.py  group.py  issue.py  merge_request.py  milestone.py  note.py  project.py  signature.py  snippet.py  user.py  wiki_blob.py
src/gitlab_watchman/signatures/: passwords.yaml
src/signatures/: passwords.yaml
src/signatures/files/: azure_service_account_files.yaml  gcp_service_account_files.yaml  interesting_files.yaml  s3_config_files.yaml
src/signatures/tokens/: aws_api_tokens.yaml  azure_api_tokens.yaml  github_api_tokens.yaml  google_api_tokens.yaml  mailchimp_api_tokens.yaml  mailgun_api_tokens.yaml  mastercard_datacash_tokens.yaml  misc_private_keys.yaml  ms_nuget_key.yaml  pagerduty_tokens.yaml  pgp_private_keys.yaml  private_tokens.yaml  shodan_api_tokens.yaml  slack_webhooks.yaml  stripe_api_tokens.yaml  twilio_api_tokens.yaml  twitter_api_tokens.yaml
tests/: test_rules.py  test_signatures.py
tests/unit/: test_unit_utils.py
tests/unit/models/: fixtures.py  test_unit_blob.py  test_unit_commit.py  test_unit_file.py  test_unit_group.py  test_unit_issue.py  test_unit_merge_request.py  test_unit_note.py  (+6 more)
(+28 files in other folders)
