[metadata]
name = gitlab-watchman
version = attr: gitlab_watchman.__version__.__version__
description = Finding exposed secrets and personal data in GitLab
long_description = file: README.md, CHANGELOG.md
license = GPL-3.0
url = https://github.com/PaperMtn/gitlab-watchman
author = PaperMtn
author_email = papermtn@protonmail.com
keywords = audit, gitlab, gitlab-watchman, watchman, blue-team, red-team, threat-hunting
classifiers =
    Intended Audience :: Information Technology
    Topic :: Security
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    requests
    PyYAML
    colorama

[options.entry_points]
console_scripts =
    gitlab-watchman = gitlab_watchman:main

[options.packages.find]
where = src
